# typemap.cpp

./: CMakeLists.txt  README.md
.cmake/Modules/: gcc.cmake  msvc.cmake
.github/workflows/: c++.yml
lib/: CMakeLists.txt  typemap.hpp
tests/: CMakeLists.txt  typename.cpp
